--- a/style.css
+++ b/style.css
@@ -101,3 +101,12 @@ img {
   display: none;
 }
 
+.fancy-title {
+  font-family: 'Your Bubbly Font', cursive; /* Replace with actual font */
+  color: purple;
+  display: inline-block;
+  padding: 10px;
+  border: 5px solid transparent;
+  border-image: linear-gradient(to bottom, yellow, yellow) 1 100%;
+  border-image-slice: 1;
+}
