--- a/style.css
+++ b/style.css
@@ -8,6 +8,10 @@ body {
   justify-content: center;
   min-height: 100vh;
   background-color: #f5f5f5;
+  background: rgba(0, 0, 0, 0.4); /* Background color with opacity */
+  background-image: url('cartoon-stars-on-a-purple-background-vector-3442168.jpg'); /* Background image */
+  background-size: cover; /* Maintain image aspect ratio while covering the entire element */
+  background-blend-mode: overlay; /* Blend the background image with the background color */
 }
 
 header {
@@ -52,8 +56,10 @@ img {
 }
 
 .highlighted {
-  border: 2px solid #ff9900;
-  box-shadow: 0px 0px 10px #ff9900;
+  border: 5px solid yellow;
+  box-shadow: 0px 0px 10px yellow;
+  border-radius: 2%;
+  filter: brightness(1.2); 
 }
 
 #searchContainer {
