--- a/style.css
+++ b/style.css
@@ -68,6 +68,10 @@ img {
 }
 
 .image-wrapper {
+  display: flex;
+  flex-direction: column;
+  align-items: center; /* Center items horizontally */
+  text-align: center; /* Center text horizontally */
   position: relative;
   display: inline-block;
 }
