--- a/style.css
+++ b/style.css
@@ -131,3 +131,16 @@ img {
   align-items: center; /* Vertically center the children */
   gap: 10px; /* Add some spacing between the elements */
 }
+
+#floatingIsland {
+  position: fixed;
+  bottom: 0;
+  left: 80%;
+  transform: translateX(-50%);
+  z-index: 1; /* Ensure it's above the background image */
+}
+
+#floatingIsland img {
+  width: 600px; /* Adjust the width to your image size */
+  height: auto; /* Maintain the image's aspect ratio */
+}
