--- a/style.css
+++ b/style.css
@@ -9,7 +9,8 @@ body {
   min-height: 100vh;
   background-color: #f5f5f5;
   background: rgba(0, 0, 0, 0.4); /* Background color with opacity */
-  background-image: url('cartoon-stars-on-a-purple-background-vector-3442168.jpg'); /* Background image */
+  /*
+  background-image: url('cartoon-stars-on-a-purple-background-vector-3442168.jpg');  Background image */
   background-size: cover; /* Maintain image aspect ratio while covering the entire element */
   background-blend-mode: overlay; /* Blend the background image with the background color */
 }
