--- a/style.css
+++ b/style.css
@@ -105,6 +105,13 @@ img {
   opacity: 1;
 }
 
+.image-wrapper.highlighted {
+  border: 5px solid yellow;
+  box-shadow: 0px 0px 10px yellow;
+  border-radius: 2%;
+  filter: brightness(1.2);
+}
+
 #searchImage {
   width: 200px;
   height: 200px;
@@ -133,15 +140,10 @@ img {
   gap: 10px; /* Add some spacing between the elements */
 }
 
-#floatingIsland {
-  position: fixed;
-  bottom: 0;
-  left: 80%;
-  transform: translateX(-50%);
-  z-index: 1; /* Ensure it's above the background image */
+#searchResultImage {
+  width: 300px; /* Adjust the width as needed */
+  height: auto; /* Maintain aspect ratio */
+  display: none;
 }
 
-#floatingIsland img {
-  width: 600px; /* Adjust the width to your image size */
-  height: auto; /* Maintain the image's aspect ratio */
-}
+
